; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/afs/extr_proc.c_afs_proc_cell_vlservers_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/afs/extr_proc.c_afs_proc_cell_vlservers_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.seq_file = type { %struct.afs_cell* }
%struct.afs_cell = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.seq_file*, i8*)* @afs_proc_cell_vlservers_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @afs_proc_cell_vlservers_stop(%struct.seq_file* %0, i8* %1) #0 {
  %3 = alloca %struct.seq_file*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.afs_cell*, align 8
  store %struct.seq_file* %0, %struct.seq_file** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.seq_file*, %struct.seq_file** %3, align 8
  %7 = getelementptr inbounds %struct.seq_file, %struct.seq_file* %6, i32 0, i32 0
  %8 = load %struct.afs_cell*, %struct.afs_cell** %7, align 8
  store %struct.afs_cell* %8, %struct.afs_cell** %5, align 8
  %9 = load %struct.afs_cell*, %struct.afs_cell** %5, align 8
  %10 = getelementptr inbounds %struct.afs_cell, %struct.afs_cell* %9, i32 0, i32 0
  %11 = call i32 @up_read(i32* %10)
  ret void
}

declare dso_local i32 @up_read(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
